# rust-study

./: .gitignore  README.md
docs/: Lifetime.md
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
reqwest_test/: Cargo.toml
reqwest_test/src/: main.rs
